  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------


2005/07/08: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_StringList_Sort()


2005/06/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added configure-switch "--enable-gwenui" (defaults to yes)
  This is needed for OpenZaurus (will disable GWENUI there).


2005/06/21: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed order for typemaker tool: define struct before including headers


===========================================================================
MARK: released gwenhywfar-1.13.3 (2005/06/14)
===========================================================================


2005/06/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- replaced "&>" by "2>" in configure.ac (should fix problems with BSD shell
  reported by Sam Lawrance)
- args.c: Removed use of flag GWEN_PATH_FLAGS_CREATE_VAR


2005/06/03: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in GWEN_Buffer_InsertRoom: Was not adjusting usedBytes field
- fixed a bug in GWEN_Buffer_AllocRoom: Was not adding +1 for trailing NULL
  byte


===========================================================================
MARK: released gwenhywfar-1.13.2 (2005/05/25)
===========================================================================


2005/05/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed GWEN_DB_VariableExists(): Now works with paths as well


===========================================================================
MARK: released gwenhywfar-1.13.1 (2005/05/24)